Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-5753

QGtkStyle regression with drawing menu items when using Clearlooks

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.2
    • 4.6.0
    • GUI: Look'n'Feel
    • None

    Description

      As seen in the attached screenshot, menu items don't look correct anymore in the QGtkStyle with Qt 4.6. Two issues are noted:

      • The Qt menu item is two pixels too narrow.
      • The highlight of the Qt menu item does not extend to include the right border of the menu.

      Neither of these issues existed in Qt 4.5, so these are regressions.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bachewii Jens
            lindeije Thorbjørn Lindeijer (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes