Fix multiple regressions in QGtkStyle caused by freetype fixes

Qt 4.6 reports smaller sizes for all fonts which means a lot of
the size adjustments QGtkStyle does were now off. I have adjusted
most of them including some fixes to menu items themselves.

Note that the changes were introduced with this change:
04d18b38c38c5ff623b30366ea08d56128b9b7d0

We now also adapt to GNOME 2.16 style submenu arrow sizes.
Combo boxes, line edits, spin boxes and push buttons should
finally have a uniform height.

Task-number: QTBUG-5753
Reviewed-by: thorbjorn
(cherry picked from commit 5d4f58843bb1c8590986aa710dbea30525578a5f)